// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeDetailsSection renders with description:  1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        item label
      </span>
      <span
        className="text"
      >
        item content
      </span>
    </li>
    <li>
      <span
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;

exports[`makeDetailsSection renders with description: description-text 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        item label
      </span>
      <span
        className="text"
      >
        item content
      </span>
    </li>
    <li>
      <span
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
    <li>
      <span
        className="icon"
      >
        <CommentIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        comment:
      </span>
      <span
        className="text description-text"
      >
        description-text
      </span>
    </li>
  </ul>
</div>
`;

exports[`makeDetailsSection renders with description: null 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        item label
      </span>
      <span
        className="text"
      >
        item content
      </span>
    </li>
    <li>
      <span
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;

exports[`makeDetailsSection renders with description: undefined 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        item label
      </span>
      <span
        className="text"
      >
        item content
      </span>
    </li>
    <li>
      <span
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;
